syntax = "proto3";

// cd ..
//protoc --proto_path=. --go_out=. --go_opt=paths=source_relative account/*.proto

package account;
//option go_package = ".;account";
option go_package = "github.com/yaruz/app/internal/app/proto/account";


message AccountSettings {
  uint64  LangID    = 1;
}



