syntax = "proto3";

// cd ..
//protoc --proto_path=. --go_out=. --go_opt=paths=source_relative user/*.proto

package user;
//option go_package = ".;user";
option go_package = "github.com/yaruz/app/internal/app/proto/user";

import "google/protobuf/timestamp.proto";


message User {
  uint64  ID                           = 1;
  string  AccountID                    = 2;
  string  Email                        = 3;
  string  Phone                        = 4;
  google.protobuf.Timestamp CreatedAt  = 5;
}


