syntax = "proto3";

// protoc --go_out=. *.proto

package proto;
option go_package = ".;proto";

import "google/protobuf/timestamp.proto";


message Token {
  string  AccessToken               = 1;
  string  TokenType                 = 2;
  string  RefreshToken              = 3;
  google.protobuf.Timestamp Expiry  = 4;
}


